tagsinput search user use typeahead

--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/include.html
@@ -69,6 +69,9 @@
 <div th:fragment="bootstrap-tagsinput-css">
   <link th:href="@{/ajax/libs/bootstrap-tagsinput/bootstrap-tagsinput.css?v=0.8.0}" rel="stylesheet"/>
 </div>
+<div th:fragment="bootstrap-tagsinput-typeahead-css">
+  <script th:src="@{/ajax/libs/bootstrap-tagsinput/bootstrap-tagsinput-typeahead.css?v=0.8.0}"></script>
+</div>
 <div th:fragment="bootstrap-tagsinput-js">
   <script th:src="@{/ajax/libs/bootstrap-tagsinput/bootstrap-tagsinput.min.js?v=0.8.0}"></script>
 </div>
