--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -143,7 +143,7 @@
       // ---------------------------------select2
       $("select[name='groups']").select2({
         ajax: {
-          url: prefix + "/match_group",
+          url: prefix + "/search_group",
           type: "get",
           dataType: 'json',
           delay: 300,
