--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/tasks.html
@@ -55,7 +55,7 @@
             if (value === 0) {
               return "0";
             }
-            return value ? parseFloat((value / 1000).toFixed(2)) : "-";
+            return value ? (value / 1000).toFixed(value < 1000 ? 3 : 2) : "-";
           }
         },
         {
