--- a/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
+++ b/disjob-admin/ruoyi-admin/src/main/resources/templates/main.html
@@ -482,8 +482,8 @@
             <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox" checked=""> 管理后台、账户体系及权限控制</li>
             <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 搭建一个关于项目使用说明的文档站点</li>
             <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 在线查看任务实时运行日志</li>
-            <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 告警订阅：邮件、短信、电话、飞书、钉钉、微信</li>
-            <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 可视化监控BI(Dashboard)</li>
+            <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 任务执行异常告警通知：邮件、短信、电话、飞书、钉钉、微信</li>
+            <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 任务执行情况的可视化监控BI(Dashboard)</li>
             <li class="task-list-item"><input type="checkbox" id="" disabled="" class="task-list-item-checkbox"> 增加多种Savepoint的支持：File System、Hadoop、RocksDB</li>
           </ul>
         </article>
