--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/job/detail.html
@@ -80,6 +80,12 @@
         </div>
       </div>
       <div class="form-group">
+        <label class="col-sm-3 control-label is-required">执行超时时间(毫秒)：</label>
+        <div class="col-sm-9">
+          <p class="form-control-static">[(*{executeTimeout})]</p>
+        </div>
+      </div>
+      <div class="form-group">
         <label class="col-sm-3 control-label is-required">执行冲突策略：</label>
         <div class="col-sm-9">
           <p class="form-control-static">[( ${@disjobService.desc('CollidedStrategy', job.collidedStrategy)} )]</p>
