modify worker config

--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -170,7 +170,7 @@
 
     function add() {
       table.set();
-      $.modal.open("添加" + table.options.modalName, $.operate.addUrl(), '770', '240');
+      $.modal.open("新增" + table.options.modalName, $.operate.addUrl(), '770', '240');
     }
 
     function token() {
