--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/mggroup.html
@@ -193,7 +193,7 @@
 
     function workers(group) {
       table.set();
-      $.modal.popupRight("Worker", prefix + '/worker?group=' + group);
+      $.modal.popupRight("Worker", prefix + "/worker?group=" + group);
     }
 
     function updateOwnUser(field, row, rowIndex, oldValue) {
