--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -22,8 +22,8 @@
         sidePagination: "client",
         showSearch: false,
         showRefresh: false,
-        showToggle: false,
-        showColumns: false,
+        showToggle: true,
+        showColumns: true,
         fixedColumns: true,
         fixedNumber: 3,
         columns: [{
