--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/worker.html
@@ -18,7 +18,7 @@
   <script th:inline="javascript">
     $(function () {
       const options = {
-        data: [[${list}]],
+        data: [[${workers}]],
         sidePagination: "client",
         showSearch: false,
         showRefresh: false,
