--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
@@ -3,6 +3,9 @@
 <head>
   <th:block th:include="include :: header('修改分组')" />
   <th:block th:include="include :: bootstrap-tagsinput-css" />
+  <style type="text/css">
+    label { text-align: right; }
+  </style>
 </head>
 <body class="white-bg">
 
@@ -10,32 +13,32 @@
     <form class="form-horizontal m" id="form-mygroup-edit" th:object="${data}">
       <input name="version" th:field="*{version}" type="hidden" />
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">分组名称：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-2 control-label is-required">分组名称：</label>
+        <div class="col-xs-10">
           <input name="group" th:field="*{group}" class="form-control" type="text" readonly required />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">Own User：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-2 control-label is-required">Own User：</label>
+        <div class="col-xs-10">
           <input name="ownUser" th:field="*{ownUser}" class="form-control" type="text" autocomplete="off" required />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">Dev Users：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-2 control-label">Dev Users：</label>
+        <div class="col-xs-10">
           <input type="text" name="devUsers" th:field="*{devUsers}" autocomplete="off" data-role="tagsinput" />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">Alarm Users：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-2 control-label">Alarm Users：</label>
+        <div class="col-xs-10">
           <input type="text" name="alarmUsers" th:field="*{alarmUsers}" autocomplete="off" data-role="tagsinput" />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label">Web Hook：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-2 control-label">Web Hook：</label>
+        <div class="col-xs-10">
           <input name="webHook" th:field="*{webHook}" class="form-control" type="text" autocomplete="off" />
         </div>
       </div>
@@ -68,7 +71,7 @@
         }
       });
       */
-      $("div[class='bootstrap-tagsinput']").addClass("col-sm-12");
+      $("div[class='bootstrap-tagsinput']").addClass("col-xs-12");
 
       if (![(${isOwnUser})]) {
         $("input[name='ownUser']").attr("readonly", "true")
