--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
@@ -2,20 +2,23 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
   <th:block th:include="include :: header('新增分组')" />
+  <style type="text/css">
+    label { text-align: right; }
+  </style>
 </head>
 <body class="white-bg">
 
   <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-group-add">
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">分组名称：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-3 control-label is-required">分组名称：</label>
+        <div class="col-xs-9">
           <input name="group" placeholder="分组名称" class="form-control" type="text" autocomplete="off" required />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-3 control-label is-required">负责人：</label>
-        <div class="col-sm-9">
+        <label class="col-xs-3 control-label is-required">负责人：</label>
+        <div class="col-xs-9">
           <input name="ownUser" class="form-control" type="text" autocomplete="off" required />
         </div>
       </div>
