--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/token.html
@@ -2,7 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
   <th:block th:include="include :: header('令牌管理')" />
-  <style type="text/css">
+  <style>
     label { text-align: right; }
   </style>
 </head>
