--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mygroup/edit.html
@@ -3,7 +3,7 @@
 <head>
   <th:block th:include="include :: header('修改分组')" />
   <th:block th:include="include :: bootstrap-tagsinput-css" />
-  <style type="text/css">
+  <style>
     label { text-align: right; }
   </style>
 </head>
