--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/mggroup/add.html
@@ -3,7 +3,10 @@
 <head>
   <th:block th:include="include :: header('新增分组')" />
   <style>
-    label { text-align: right; }
+    label {
+      text-align: right;
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body class="white-bg">
@@ -11,13 +14,13 @@
   <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-group-add">
       <div class="form-group">
-        <label class="col-xs-3 control-label is-required">分组名称：</label>
+        <label class="col-xs-3 control-label is-required" style="padding-right: 0;">分组名称：</label>
         <div class="col-xs-9">
-          <input name="group" placeholder="分组名称" class="form-control" type="text" autocomplete="off" required />
+          <input name="group" class="form-control" type="text" autocomplete="off" required />
         </div>
       </div>
       <div class="form-group">
-        <label class="col-xs-3 control-label is-required">负责人：</label>
+        <label class="col-xs-3 control-label is-required" style="padding-right: 0;">负责人：</label>
         <div class="col-xs-9">
           <input name="ownUser" class="form-control" type="text" autocomplete="off" required />
         </div>
