--- a/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/templates/disjob/instance/instance.html
@@ -403,6 +403,7 @@
   }
 
   function operate(instanceId, type, message) {
+    table.set();
     $.modal.confirm("确认要" + message + "吗？", function () {
       $.operate.post(prefix + "/" + type + "/" + instanceId);
     });
